Gitlab #00 Meerge code and Detail Page added with details set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DVCamera2Txt</string>
+    <string name="app_detailpage">Detail Page</string>
+
 </resources>
